# rust-mongo-api

./: .gitignore  Cargo.toml
.run/: Run rust-actix-mongo-api.run.xml
src/: main.rs
src/api/: user_api.rs
src/models/: error_model.rs  mod.rs  user_model.rs
src/repository/: mongodb_repo.rs
src/services/: logger.rs
