[package]
name = "rust-actix-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = "1.0.137"
dotenv = "0.15.0"
log = "0.4"
simplelog = "^0.12.0"
actix-web-validator = "4.0.0"

[dependencies.validator]
version = "0.15" 
features = ["derive"] 

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]
